Xcode bug workaround

--- a/ff_android/ant.properties
+++ b/ff_android/ant.properties
@@ -15,6 +15,6 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
-asset.dir=../ff_html
-private_asset.dir=../../ff_private
+asset.www.dir=../ff_html
+private_asset.www.dir=../../ff_private/www_private
 resource.absolute.dir=../../ff_private/android/res
