last_viewed_pathname in cookie

--- a/ff_compile/src/main/resources/kouchabutton.properties
+++ b/ff_compile/src/main/resources/kouchabutton.properties
@@ -17,17 +17,26 @@ html=\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" />\
 	<link rel="stylesheet" href="../design/before_restore_scroll_position.css" id="beforeRestoreScrollPosition" />\
+	<script>\
+	$.cookie('last_viewed_pathname', "" + location.pathname, {expires: 3650, path: '/'});\
+	</script>\
 </head>\
 <body>\
 	<div id="full_box">\
 		<div class="now_loading"><img src="../design/now_loading.png" alt="Now Loading..." /></div>\
 		<div id="nav">\
 			<ul>\
+                <li>\
+                	<a href="../Public/latest.html">\u6700\u65B0\u306E\u914D\u4FE1</a>\
+                </li>\
 				{index}\
 				<li>\
 					<a href="http://kaoriha.org/latest_item.html">\u8FD1\u520A\u6848\u5185\
 					</a>\
 				</li>\
+                <li>\
+                	<a href="../Public/apps.html">\u914D\u4FE1\u30A2\u30D7\u30EA</a>\
+                </li>\
 			</ul>\
 		</div>\
 		<div id="main">\
@@ -72,6 +81,9 @@ latest_separation_html=\
 					<a href="http://kaoriha.org/latest_item.html">\u8FD1\u520A\u6848\u5185\
 					</a>\
 				</li>\
+                <li>\
+                	<a href="apps.html">\u914D\u4FE1\u30A2\u30D7\u30EA</a>\
+                </li>\
 			</ul>\
 		</div>\
 		<div id="main">\
@@ -83,7 +95,6 @@ latest_separation_html=\
 					</div>\
 				</div>\
 			</div>\
-			<div id="status"></div>\
 		</div>\
 	</div>\
 </body>\
