--- a/ff_compile/src/main/resources/kouchabutton.properties
+++ b/ff_compile/src/main/resources/kouchabutton.properties
@@ -18,7 +18,10 @@ html=\
 	<link rel="stylesheet" href="../design/design.css" />\
 	<link rel="stylesheet" href="../design/before_restore_scroll_position.css" id="beforeRestoreScrollPosition" />\
 	<script>\
-	$.cookie('last_viewed_pathname', "" + location.pathname, {expires: 3650, path: '/'});\
+	var o = new Object();\
+	o.expires = 3650;\
+	o.path = '/';\
+	$.cookie('last_viewed_pathname', location.pathname, o);\
 	</script>\
 </head>\
 <body>\
