--- a/ff_compile/src/main/resources/kouchabutton.properties
+++ b/ff_compile/src/main/resources/kouchabutton.properties
@@ -21,7 +21,12 @@ html=\
 	var o = new Object();\
 	o.expires = 3650;\
 	o.path = '/';\
-	$.cookie('last_viewed_pathname', location.pathname, o);\
+	var i = location.pathname.lastIndexOf('/');\
+	var p;\
+	if (i == -1 || location.pathname.length == 1)  p = location.pathname; else p = location.pathname.substring(i + 1);\
+	$.cookie('last_viewed_pathname', p, o);\
+	if (window.ff) ; else window.ff = new Object();\
+	window.ff.StartSid = "{startSid}";\
 	</script>\
 </head>\
 <body>\
@@ -29,9 +34,6 @@ html=\
 		<div class="now_loading"><img src="../design/now_loading.png" alt="Now Loading..." /></div>\
 		<div id="nav">\
 			<ul>\
-                <li>\
-                	<a href="../Public/latest.html">\u6700\u65B0\u306E\u914D\u4FE1</a>\
-                </li>\
 				{index}\
 				<li>\
 					<a href="http://kaoriha.org/latest_item.html">\u8FD1\u520A\u6848\u5185\
@@ -70,8 +72,9 @@ latest_separation_html=\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" />\
 	<script>\
-	window.ff = new Object();\
-	window.ff.CharacterNotePath = "character_note.html";\
+	if (window.ff) ; else window.ff = new Object();\
+	window.ff.CharacterNoteElement = '<a href="character_note.html">';\
+	window.ff.StartSid = "{startSid}";\
 	</script>\
 </head>\
 <body>\
