--- a/ff_compile/src/main/resources/kouchabutton.properties
+++ b/ff_compile/src/main/resources/kouchabutton.properties
@@ -16,6 +16,9 @@ html=\
 	<script src="../design/design.js"></script>\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" />\
+<!--[if IE 8]>\
+	<link rel="stylesheet" href="../design/design_ie8.css" />\
+<![endif]-->\
 	<link rel="stylesheet" href="../design/before_restore_scroll_position.css" id="beforeRestoreScrollPosition" />\
 	<script>\
 	var o = new Object();\
@@ -71,6 +74,9 @@ latest_separation_html=\
 	<script src="../design/design.js"></script>\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" />\
+<!--[if IE 8]>\
+	<link rel="stylesheet" href="../design/design_ie8.css" />\
+<![endif]-->\
 	<script>\
 	if (window.ff) ; else window.ff = new Object();\
 	window.ff.CharacterNoteElement = '<a href="character_note.html">';\
