--- a/ff_dotnet/FFSite/Web.config
+++ b/ff_dotnet/FFSite/Web.config
@@ -72,7 +72,7 @@
 		</modules>
 		<security>
 			<authentication>
-<!--				<windowsAuthentication enabled="true"/> -->
+				<windowsAuthentication enabled="true"/>
 				<anonymousAuthentication enabled="false"/>
 			</authentication>
 		</security>
