fix: fragment overwrite didn't work. add feature: CharacterNote entry remove with blank content.

--- a/ff_compile/src/main/resources/flowerflower.properties
+++ b/ff_compile/src/main/resources/flowerflower.properties
@@ -1,4 +1,4 @@
 projectName=org.kaoriha.kouchabutton
 projectProperties=kouchabutton
 releaseTime=15:30
-testReleasePeriod=2 minutes
+#testReleasePeriod=2 minutes
