--- a/ff_android/ant.properties
+++ b/ff_android/ant.properties
@@ -16,5 +16,5 @@
 # The password will be asked during the build when you use the 'release' target.
 
 asset.www.dir=../ff_html
-private_asset.www.dir=../../ff_private/www_private
-resource.absolute.dir=../../ff_private/android/res
+private_asset.www.dir=../ff_private/www_private
+resource.absolute.dir=../ff_private/android/res
