--- a/ff_android/AndroidManifest.xml
+++ b/ff_android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.kaoriha.kouchabutton" android:versionCode="1"
-	android:versionName="0.5">
+	package="org.kaoriha.kouchabutton" android:versionCode="3"
+	android:versionName="0.5.5">
 
 	<supports-screens android:largeScreens="true"
 		android:normalScreens="true" android:smallScreens="true"
@@ -11,7 +11,7 @@
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 
-	<uses-sdk android:minSdkVersion="7" />
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name="org.kaoriha.flowerflower.FlowerflowerActivity" android:label="@string/app_name"
