--- a/ff_android/AndroidManifest.xml
+++ b/ff_android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.kaoriha.kanzenhitogata" android:versionCode="3"
+	package="org.kaoriha.kouchabutton" android:versionCode="3"
 	android:versionName="0.5.5">
 
 	<supports-screens android:largeScreens="true"
