--- a/ff_compile/txt2xml/Makefile
+++ b/ff_compile/txt2xml/Makefile
@@ -7,12 +7,13 @@ transient.tmp: draft.txt
 transient2target.patch:
 	touch -a transient2target.patch
 
-.IGNORE: target.xml.modified
 target.xml.modified: transient.tmp
-	diff -c transient.tmp target.xml > transient2target.patch
+	diff -c transient.tmp target.xml > transient2target.patch || echo ""
 
 compile: target.xml
-	java -jar ../ff_compile-0.1.jar target.xml chronicle.bin timetable.json
+	java -jar ff_compile-0.1.jar target.xml chronicle.bin timetable.json
 	xmllint --format target.xml > target.tmp
 	rm target.xml
 	mv target.tmp target.xml
+	diff -c transient.tmp target.xml > transient2target.patch || echo ""
+
