--- a/ff_dotnet/FFSite/Web.config
+++ b/ff_dotnet/FFSite/Web.config
@@ -72,6 +72,9 @@
 		</modules>
 		<security>
 			<authentication>
+				<!--
+					実運用サーバでは下の<windowsAuthentication>セクションをコメントアウトします。
+				-->
 				<windowsAuthentication enabled="true"/>
 				<anonymousAuthentication enabled="false"/>
 			</authentication>
