--- a/ff_compile/src/main/resources/kouchabutton.properties
+++ b/ff_compile/src/main/resources/kouchabutton.properties
@@ -113,3 +113,12 @@ latest_separation_html=\
 	</div>\
 </body>\
 </html>
+
+about_this_app=\
+<h1>\u3053\u306E\u30A2\u30D7\u30EA\u306B\u3064\u3044\u3066</h1>\
+<p>\u3000\u3053\u306E\u30A2\u30D7\u30EA\u306F\u5C0F\u8AAC\u300E\u7D05\u8336\u30DC\u30BF\u30F3\u300F\u3092\u8868\u793A\u3059\u308B\u3082\u306E\u3067\u3059\u3002</p>\
+<p>\u3000\u3053\u306E\u30A2\u30D7\u30EA\u306E\u4E00\u5207\u306E\u8457\u4F5C\u6A29\u306F\u897F\u5728\u5BB6\u9999\u7E54\u6D3E\u3068\u4E2D\u91CC\u4E00\u306B\u5E30\u5C5E\u3057\u3066\u3044\u307E\u3059\u3002</p>\
+<p>\u3000\u3053\u306E\u30A2\u30D7\u30EA\u306F <a href="http://kaoriha.org/flowerflower/">flowerflower</a> \u3092\u7528\u3044\u3066\u3044\u307E\u3059\u3002</p>\
+<h1>\u7279\u6B8A\u306A\u64CD\u4F5C</h1>\
+<p>\u3000\u4E0B\u306E\u300C\u30B9\u30C8\u30EC\u30FC\u30B8\u3092\u524A\u9664\u300D\u30DC\u30BF\u30F3\u3092\u62BC\u3059\u3068\u3001\u3053\u306E\u30A2\u30D7\u30EA\u306E\u4FDD\u6301\u3057\u3066\u3044\u308B\u8A18\u61B6\u304C\u3059\u3079\u3066\u524A\u9664\u3055\u308C\u307E\u3059\u3002\u30A2\u30D7\u30EA\u306E\u52D5\u4F5C\u306B\u7570\u5E38\u304C\u3042\u308B\u3068\u304D\u306B\u3060\u3051\u62BC\u3057\u3066\u304F\u3060\u3055\u3044\u3002</p>\
+<p> <input type="button" name="clear" value="\u30B9\u30C8\u30EC\u30FC\u30B8\u3092\u524A\u9664" onclick="window.ff.ClearAllStorage();" /> </p>
