--- a/ff_compile/src/main/resources/kouchabutton.properties
+++ b/ff_compile/src/main/resources/kouchabutton.properties
@@ -1,12 +1,12 @@
-character_note_name=\u767B\u5834\u4EBA\u7269\u7D39\u4ECB
-latest_separation_name=\u6700\u65B0\u306E\u914D\u4FE1
+character_note_name=\u767b\u5834\u4eba\u7269\u7d39\u4ecb
+latest_separation_name=\u6700\u65b0\u306e\u914d\u4fe1
 
 html=\
 <!DOCTYPE HTML>\
 <html lang="ja">\
 <head>\
 	<meta charset="utf-8">\
-	<title>\u7D05\u8336\u30DC\u30BF\u30F3 {title}</title>\
+	<title>\u7d05\u8336\u30dc\u30bf\u30f3 {title}</title>\
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">\
 	<script src="../jquery-1.6.2.min.js"></script>\
 	<script src="../jquery-cookie.js"></script>\
@@ -16,7 +16,8 @@ html=\
 	<script src="../design/design.js"></script>\
     <script src="../design/insert_app_badge.js"></script>\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
-	<link rel="stylesheet" href="../design/design.css" />\
+	<link rel="stylesheet" href="../design/design.css" media="screen" />\
+	<link rel="stylesheet" href="../design/print.css" media="print" />\
 <!--[if IE 8]>\
 	<link rel="stylesheet" href="../design/design_ie8.css" />\
 <![endif]-->\
@@ -40,11 +41,11 @@ html=\
 			<ul>\
 				{index}\
 				<li>\
-					<a href="http://kaoriha.org/latest_item.html">\u8FD1\u520A\u6848\u5185\
+					<a href="http://kaoriha.org/latest_item.html">\u8fd1\u520a\u6848\u5185\
 					</a>\
 				</li>\
                 <li>\
-                	<a href="../Public/apps.html">\u914D\u4FE1\u30A2\u30D7\u30EA</a>\
+                	<a href="../Public/apps.html">\u914d\u4fe1\u30a2\u30d7\u30ea</a>\
                 </li>\
 			</ul>\
 		</div>\
@@ -67,7 +68,7 @@ latest_separation_html=\
 <html lang="ja">\
 <head>\
 	<meta charset="utf-8">\
-	<title>\u7D05\u8336\u30DC\u30BF\u30F3 {title} {yyyy}\u5E74{MM}\u6708{dd}\u65E5\u914D\u4FE1</title>\
+	<title>\u7d05\u8336\u30dc\u30bf\u30f3 {title} {yyyy}\u5e74{MM}\u6708{dd}\u65e5\u914d\u4fe1</title>\
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">\
 	<script src="../jquery-1.6.2.min.js"></script>\
     <link rel="stylesheet" href="../tsume/tsume.css">\
@@ -92,18 +93,18 @@ latest_separation_html=\
 			<ul>\
 				{index}\
 				<li>\
-					<a href="http://kaoriha.org/latest_item.html">\u8FD1\u520A\u6848\u5185\
+					<a href="http://kaoriha.org/latest_item.html">\u8fd1\u520a\u6848\u5185\
 					</a>\
 				</li>\
                 <li>\
-                	<a href="apps.html">\u914D\u4FE1\u30A2\u30D7\u30EA</a>\
+                	<a href="apps.html">\u914d\u4fe1\u30a2\u30d7\u30ea</a>\
                 </li>\
 			</ul>\
 		</div>\
 		<div id="main">\
 			<div id="outer_frame">\
 				<div id="text_frame">\
-					<h1 style="text-align:right;">{yyyy}\u5E74{MM}\u6708{dd}\u65E5\u914D\u4FE1</h1>\
+					<h1 style="text-align:right;">{yyyy}\u5e74{MM}\u6708{dd}\u65e5\u914d\u4fe1</h1>\
 					<div id="content">\
 						{content}\
 					</div>\
@@ -115,10 +116,10 @@ latest_separation_html=\
 </html>
 
 about_this_app=\
-<h1>\u3053\u306E\u30A2\u30D7\u30EA\u306B\u3064\u3044\u3066</h1>\
-<p>\u3000\u3053\u306E\u30A2\u30D7\u30EA\u306F\u5C0F\u8AAC\u300E\u7D05\u8336\u30DC\u30BF\u30F3\u300F\u3092\u8868\u793A\u3059\u308B\u3082\u306E\u3067\u3059\u3002</p>\
-<p>\u3000\u3053\u306E\u30A2\u30D7\u30EA\u306E\u4E00\u5207\u306E\u8457\u4F5C\u6A29\u306F\u897F\u5728\u5BB6\u9999\u7E54\u6D3E\u3068\u4E2D\u91CC\u4E00\u306B\u5E30\u5C5E\u3057\u3066\u3044\u307E\u3059\u3002</p>\
-<p>\u3000\u3053\u306E\u30A2\u30D7\u30EA\u306F <a href="http://kaoriha.org/flowerflower/">flowerflower</a> \u3092\u7528\u3044\u3066\u3044\u307E\u3059\u3002</p>\
-<h1>\u7279\u6B8A\u306A\u64CD\u4F5C</h1>\
-<p>\u3000\u4E0B\u306E\u300C\u30B9\u30C8\u30EC\u30FC\u30B8\u3092\u524A\u9664\u300D\u30DC\u30BF\u30F3\u3092\u62BC\u3059\u3068\u3001\u3053\u306E\u30A2\u30D7\u30EA\u306E\u4FDD\u6301\u3057\u3066\u3044\u308B\u8A18\u61B6\u304C\u3059\u3079\u3066\u524A\u9664\u3055\u308C\u307E\u3059\u3002\u30A2\u30D7\u30EA\u306E\u52D5\u4F5C\u306B\u7570\u5E38\u304C\u3042\u308B\u3068\u304D\u306B\u3060\u3051\u62BC\u3057\u3066\u304F\u3060\u3055\u3044\u3002</p>\
-<p> <input type="button" name="clear" value="\u30B9\u30C8\u30EC\u30FC\u30B8\u3092\u524A\u9664" onclick="window.ff.ClearAllStorage();" /> </p>
+<h1>\u3053\u306e\u30a2\u30d7\u30ea\u306b\u3064\u3044\u3066</h1>\
+<p>\u3000\u3053\u306e\u30a2\u30d7\u30ea\u306f\u5c0f\u8aac\u300e\u7d05\u8336\u30dc\u30bf\u30f3\u300f\u3092\u8868\u793a\u3059\u308b\u3082\u306e\u3067\u3059\u3002</p>\
+<p>\u3000\u3053\u306e\u30a2\u30d7\u30ea\u306e\u4e00\u5207\u306e\u8457\u4f5c\u6a29\u306f\u897f\u5728\u5bb6\u9999\u7e54\u6d3e\u3068\u4e2d\u91cc\u4e00\u306b\u5e30\u5c5e\u3057\u3066\u3044\u307e\u3059\u3002</p>\
+<p>\u3000\u3053\u306e\u30a2\u30d7\u30ea\u306f <a href="http://kaoriha.org/flowerflower/">flowerflower</a> \u3092\u7528\u3044\u3066\u3044\u307e\u3059\u3002</p>\
+<h1>\u7279\u6b8a\u306a\u64cd\u4f5c</h1>\
+<p>\u3000\u4e0b\u306e\u300c\u30b9\u30c8\u30ec\u30fc\u30b8\u3092\u524a\u9664\u300d\u30dc\u30bf\u30f3\u3092\u62bc\u3059\u3068\u3001\u3053\u306e\u30a2\u30d7\u30ea\u306e\u4fdd\u6301\u3057\u3066\u3044\u308b\u8a18\u61b6\u304c\u3059\u3079\u3066\u524a\u9664\u3055\u308c\u307e\u3059\u3002\u30a2\u30d7\u30ea\u306e\u52d5\u4f5c\u306b\u7570\u5e38\u304c\u3042\u308b\u3068\u304d\u306b\u3060\u3051\u62bc\u3057\u3066\u304f\u3060\u3055\u3044\u3002</p>\
+<p> <input type="button" name="clear" value="\u30b9\u30c8\u30ec\u30fc\u30b8\u3092\u524a\u9664" onclick="window.ff.ClearAllStorage();" /> </p>
