--- a/ff_android/AndroidManifest.xml
+++ b/ff_android/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.kaoriha.kouchabutton" android:versionCode="3"
-	android:versionName="0.5.5">
+	package="org.kaoriha.kouchabutton" android:versionCode="4"
+	android:versionName="1.0.0">
 
 	<supports-screens android:largeScreens="true"
 		android:normalScreens="true" android:smallScreens="true"
 		android:resizeable="true" android:anyDensity="true" />
-	<uses-permission android:name="android.permission.INTERNET" />
+<!-- 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="com.android.vending.CHECK_LICENSE" />
-
+ -->
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
