--- a/ff_ios/ff_ios/ff_ios-Info.plist
+++ b/ff_ios/ff_ios/ff_ios-Info.plist
@@ -34,6 +34,8 @@
 				<string>Default-Landscape@2x~ipad.png</string>
 				<string>Default-Portrait@2x~ipad.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -55,7 +57,7 @@
 	<key>NSMainNibFile~ipad</key>
 	<string></string>
 	<key>UIPrerenderedIcon</key>
-	<false/>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
