--- a/ff_compile/pom.xml
+++ b/ff_compile/pom.xml
@@ -17,14 +17,14 @@
 			<activation>
 				<property>
 					<name>java.vendor</name>
-					<value>Sun Microsystems Inc.</value>
+					<value>Oracle Corporation</value>
 				</property>
 			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.sun</groupId>
 					<artifactId>tools</artifactId>
-					<version>1.6</version>
+					<version>1.4.2</version>
 					<scope>system</scope>
 					<systemPath>${java.home}/../lib/tools.jar</systemPath>
 				</dependency>
