--- a/ff_compile/src/main/resources/flowerflower.properties
+++ b/ff_compile/src/main/resources/flowerflower.properties
@@ -1,4 +1,5 @@
 projectName=org.kaoriha.kouchabutton
 projectProperties=kouchabutton
 releaseTime=15:30
+releaseCronPattern=0 3 * jan-jun,sep-dec mon-fri
 #testReleasePeriod=2 minutes
