--- a/ff_compile/pom.xml
+++ b/ff_compile/pom.xml
@@ -79,6 +79,11 @@
 			<version>1.2.11</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.2</version>
