new handler site design

--- a/ff_compile/src/main/resources/flowerflower.properties
+++ b/ff_compile/src/main/resources/flowerflower.properties
@@ -1,5 +1,3 @@
-projectName=org.kaoriha.kouchabutton
-projectProperties=kouchabutton
-releaseTime=15:30
-releaseCronPattern=0 3 * jan-jun,sep-dec mon-fri
-#testReleasePeriod=2 minutes
+projectName=org.kaoriha.miyako
+projectProperties=miyako
+releaseCronPattern=0 15 * * mon-fri
