--- a/ff_dotnet/FFSite/Web.config
+++ b/ff_dotnet/FFSite/Web.config
@@ -8,7 +8,7 @@
 	<log4net>
 		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
 			<file type="log4net.Util.PatternString"
-					value="%envFolderPath{CommonApplicationData}\\flowerflower\\site.log" />
+					value="%envFolderPath{CommonApplicationData}\\flowerflower\\miyako.log" />
 			<param name="AppendToFile" value="true" />
 			<layout type="log4net.Layout.PatternLayout">
 				<param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
@@ -23,7 +23,7 @@
 	</log4net>
 
 	<appSettings>
-		<add key="TitleName" value="debug title" />
+		<add key="TitleName" value="miyako" />
 
 		<!-- 
         public static readonly int LICENSED = 0x0;
@@ -74,9 +74,9 @@
 			<authentication>
 				<!--
 					実運用サーバでは下の<windowsAuthentication>セクションをコメントアウトします。
-				-->
 				<windowsAuthentication enabled="true"/>
-				<anonymousAuthentication enabled="false"/>
+				-->
+					<anonymousAuthentication enabled="false"/>
 			</authentication>
 		</security>
 
