--- a/ff_compile/src/main/resources/miyako.properties
+++ b/ff_compile/src/main/resources/miyako.properties
@@ -14,6 +14,7 @@ html=\
 	<script src="../tsume/tsume.js"></script>\
 	<script src="../flowerflower/restore_scroll.js"></script>\
 	<script src="../design/design.js"></script>\
+    <script src="../android/ruby_fix.js"></script>\
     <script src="../design/insert_app_badge.js"></script>\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" media="screen" />\
@@ -74,6 +75,7 @@ latest_separation_html=\
     <link rel="stylesheet" href="../tsume/tsume.css">\
 	<script src="../tsume/tsume.js"></script>\
 	<script src="../design/design.js"></script>\
+    <script src="../android/ruby_fix.js"></script>\
     <script src="../design/insert_app_badge.js"></script>\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" />\
