--- a/ff_android/AndroidManifest.xml
+++ b/ff_android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.kaoriha.miyako" android:versionCode="4"
-	android:versionName="1.0.0">
+	android:versionName="0.5.0">
 
 	<supports-screens android:largeScreens="true"
 		android:normalScreens="true" android:smallScreens="true"
@@ -10,9 +10,9 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="com.android.vending.CHECK_LICENSE" />
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15" />
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="true">
 		<activity android:name="org.kaoriha.flowerflower.FlowerflowerActivity" android:label="@string/app_name"
 			android:configChanges="orientation|keyboardHidden" android:launchMode="singleTop">
 			<intent-filter>
