--- a/ff_android/ant.properties
+++ b/ff_android/ant.properties
@@ -18,3 +18,4 @@
 asset.www.dir=../ff_html
 private_asset.www.dir=../ff_private/www_private
 resource.absolute.dir=../ff_private/android/res
+asset.absolute.dir=bin/assets
