ie9 ruby bug workaround

--- a/ff_compile/src/main/resources/miyako.properties
+++ b/ff_compile/src/main/resources/miyako.properties
@@ -12,6 +12,10 @@ html=\
 	<script src="../jquery-cookie.js"></script>\
     <link rel="stylesheet" href="../tsume/tsume.css">\
 	<script src="../tsume/tsume.js"></script>\
+<!--[if IE 9]>\
+    <link rel="stylesheet" href="../ie/ruby_fix.css" />\
+    <script src="../ie/ruby_fix.js"></script>\
+<![endif]-->\
 	<script src="../flowerflower/restore_scroll.js"></script>\
 	<script src="../design/design.js"></script>\
     <script src="../android/ruby_fix.js"></script>\
@@ -74,6 +78,10 @@ latest_separation_html=\
 	<script src="../jquery-1.6.2.min.js"></script>\
     <link rel="stylesheet" href="../tsume/tsume.css">\
 	<script src="../tsume/tsume.js"></script>\
+<!--[if IE 9]>\
+    <link rel="stylesheet" href="../ie/ruby_fix.css" />\
+    <script src="../ie/ruby_fix.js"></script>\
+<![endif]-->\
 	<script src="../design/design.js"></script>\
     <script src="../android/ruby_fix.js"></script>\
     <script src="../design/insert_app_badge.js"></script>\
