--- a/ff_dotnet/FFSite/Web.config
+++ b/ff_dotnet/FFSite/Web.config
@@ -39,6 +39,11 @@
 		実運用時には0
 		-->
 		<add key="LvlResponseCodeShouldBe" value="3" />
+
+		<!--
+		実運用時にはtrue
+		-->
+		<add key="LvlVerifySign" value="false" />
 	</appSettings>
 
 	<connectionStrings />
