newsstand background launch

--- a/ff_ios2/ff_ios2/ff_ios2-Info.plist
+++ b/ff_ios2/ff_ios2/ff_ios2-Info.plist
@@ -39,6 +39,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>UINewsstandApp</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
