--- a/ff_ios2/Podfile
+++ b/ff_ios2/Podfile
@@ -2,5 +2,5 @@ platform :ios, '5.1'
 pod 'Cordova', :podspec => 'Cordova.podspec'
 pod 'InAppSettingsKit', :podspec => 'InAppSettingsKit.podspec'
 pod 'PSTCollectionView', :podspec => 'PSTCollectionView.podspec'
-pod 'MKStoreKit', :podspec => 'MKStoreKit.podspec'
 pod 'ReactiveCocoa'
+pod 'SVProgressHUD', :podspec => 'SVProgressHUD.podspec'
