TitleInfo and cell

--- a/ff_ios2/Podfile
+++ b/ff_ios2/Podfile
@@ -4,3 +4,4 @@ pod 'InAppSettingsKit', :podspec => 'InAppSettingsKit.podspec'
 pod 'PSTCollectionView', :podspec => 'PSTCollectionView.podspec'
 pod 'ReactiveCocoa'
 pod 'SVProgressHUD', :podspec => 'SVProgressHUD.podspec'
+pod 'UIGlossyButton', :podspec => 'UIGlossyButton.podspec'
