--- a/ff_compile/src/main/resources/miyako.properties
+++ b/ff_compile/src/main/resources/miyako.properties
@@ -19,7 +19,6 @@ html=\
     <script src="../design/insert_app_badge.js"></script>\
 	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" media="screen" />\
-	<link rel="stylesheet" href="../design/print.css" media="print" />\
 <!--[if IE 8]>\
 	<link rel="stylesheet" href="../design/design_ie8.css" />\
 <![endif]-->\
@@ -35,6 +34,7 @@ html=\
 	if (window.ff) ; else window.ff = new Object();\
 	window.ff.StartSid = "{startSid}";\
 	</script>\
+    <script src="/ga.js"></script>\
 </head>\
 <body>\
 	<div id="full_box">\
@@ -56,12 +56,33 @@ html=\
 				<div id="text_frame">\
 					<div id="content">\
 						{content}\
+						<h2>\u914d\u4fe1\u30a2\u30d7\u30ea</h2>\
+                        <p>\u3000<a href="apps.html">iOS / Android\u306e\u30a2\u30d7\u30ea</a>\u3067\u914d\u4fe1\u3092\u53d7\u3051\u53d6\u308c\u307e\u3059\u3002\u904e\u53bb\u306e\u914d\u4fe1\u5206\u3082\u3059\u3079\u3066\u3054\u89a7\u3044\u305f\u3060\u3051\u307e\u3059\u3002</p>\
+                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id605689149?mt=8&amp;uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>\
 					</div>\
 				</div>\
 			</div>\
 			<div id="status"></div>\
 		</div>\
 	</div>\
+<!-- Google Code for &#30334;&#21512;&#23567;&#35500; Remarketing List -->\
+<script type="text/javascript">\
+/* <![CDATA[ */\
+var google_conversion_id = 1004812353;\
+var google_conversion_language = "en";\
+var google_conversion_format = "3";\
+var google_conversion_color = "ffffff";\
+var google_conversion_label = "2_CyCIfbyAIQwfCQ3wM";\
+var google_conversion_value = 0;\
+/* ]]> */\
+</script>\
+<script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">\
+</script>\
+<noscript>\
+<div style="display:inline;">\
+<img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1004812353/?label=2_CyCIfbyAIQwfCQ3wM&amp;guid=ON&amp;script=0"/>\
+</div>\
+</noscript>\
 </body>\
 </html>
 
@@ -89,6 +110,7 @@ latest_separation_html=\
 	window.ff.CharacterNoteElement = '<a href="character_note.html">';\
 	window.ff.StartSid = "{startSid}";\
 	</script>\
+    <script src="/ga.js"></script>\
 </head>\
 <body>\
 	<div id="full_box">\
@@ -111,11 +133,32 @@ latest_separation_html=\
 					<h1 style="text-align:right;">{yyyy}\u5e74{MM}\u6708{dd}\u65e5\u914d\u4fe1</h1>\
 					<div id="content">\
 						{content}\
+						<h2>\u914d\u4fe1\u30a2\u30d7\u30ea</h2>\
+                        <p>\u3000<a href="apps.html">iOS / Android\u306e\u30a2\u30d7\u30ea</a>\u3067\u914d\u4fe1\u3092\u53d7\u3051\u53d6\u308c\u307e\u3059\u3002\u904e\u53bb\u306e\u914d\u4fe1\u5206\u3082\u3059\u3079\u3066\u3054\u89a7\u3044\u305f\u3060\u3051\u307e\u3059\u3002</p>\
+                        <p style="text-align:center;"><a href="http://itunes.apple.com/jp/app/id605689149?mt=8&amp;uo=4" target="itunes_store" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/ios_app_conversion.html']);"><img style="height:3em;" src="../design/app_store_badge.png" alt="App Store" /></a> <a href="https://play.google.com/store/apps/details?id=org.kaoriha.miyako" onclick="javascript:_gaq.push(['_trackPageview', '/miyako/android_app_conversion.html']);"><img style="height:3em;" src="../design/google_play_badge.png" alt="Google Play" /></a></p>\
 					</div>\
 				</div>\
 			</div>\
 		</div>\
 	</div>\
+<!-- Google Code for &#30334;&#21512;&#23567;&#35500; Remarketing List -->\
+<script type="text/javascript">\
+/* <![CDATA[ */\
+var google_conversion_id = 1004812353;\
+var google_conversion_language = "en";\
+var google_conversion_format = "3";\
+var google_conversion_color = "ffffff";\
+var google_conversion_label = "2_CyCIfbyAIQwfCQ3wM";\
+var google_conversion_value = 0;\
+/* ]]> */\
+</script>\
+<script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">\
+</script>\
+<noscript>\
+<div style="display:inline;">\
+<img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1004812353/?label=2_CyCIfbyAIQwfCQ3wM&amp;guid=ON&amp;script=0"/>\
+</div>\
+</noscript>\
 </body>\
 </html>
 
