--- a/ff_ios2/Podfile
+++ b/ff_ios2/Podfile
@@ -5,3 +5,4 @@ pod 'PSTCollectionView', :podspec => 'PSTCollectionView.podspec'
 pod 'ReactiveCocoa'
 pod 'SVProgressHUD', :podspec => 'SVProgressHUD.podspec'
 pod 'UIGlossyButton', :podspec => 'UIGlossyButton.podspec'
+pod 'JSONKit', :podspec => 'JSONKit.podspec'
