--- a/ff_dotnet/FFSite/Web.config
+++ b/ff_dotnet/FFSite/Web.config
@@ -44,6 +44,16 @@
 		実運用時にはtrue
 		-->
 		<add key="LvlVerifySign" value="false" />
+
+		<!--
+		iOSアプリのBundle ID
+		-->
+		<add key="IosAppBundleId" value="org.kaoriha.flowerflower.ff-ios2" />
+
+		<!--
+		iTunes ConnectのProduct Identifier
+		-->
+		<add key="IosProductIdStartsWith" value="non_consumable_test_" />
 	</appSettings>
 
 	<connectionStrings />
