--- a/ff_ios2/Podfile
+++ b/ff_ios2/Podfile
@@ -6,3 +6,4 @@ pod 'ReactiveCocoa'
 pod 'SVProgressHUD', :podspec => 'SVProgressHUD.podspec'
 pod 'UIGlossyButton', :podspec => 'UIGlossyButton.podspec'
 pod 'JSONKit', :podspec => 'JSONKit.podspec'
+pod 'ZipArchive', :podspec => 'ZipArchive.podspec'
