--- a/ff_ios2/Podfile
+++ b/ff_ios2/Podfile
@@ -7,3 +7,4 @@ pod 'SVProgressHUD', :podspec => 'SVProgressHUD.podspec'
 pod 'UIGlossyButton', :podspec => 'UIGlossyButton.podspec'
 pod 'JSONKit', :podspec => 'JSONKit.podspec'
 pod 'ZipArchive', :podspec => 'ZipArchive.podspec'
+pod 'Reachability'
