--- a/ff_ios2/ff_ios2/TitleInfos.plist
+++ b/ff_ios2/ff_ios2/TitleInfos.plist
@@ -6,9 +6,9 @@
 	<array>
 		<dict>
 			<key>id</key>
-			<string>鄙の姫、宮処の巫女、余所者の嫁</string>
+			<string>miyako</string>
 			<key>name</key>
-			<string>miyakonomiko</string>
+			<string>鄙の姫、宮処の巫女、余所者の嫁</string>
 			<key>tags</key>
 			<string>小説,ダウンロード,連載中,有料</string>
 			<key>lastUpdated</key>
